[project]
name = "footy-hub"
version = "0.1.0"
description = "Football data analysis for learning purposes."
readme = "README.md"
license = "MIT"
authors = ["Cyuss <maamra.youcef@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/cyuss/footy-hub"
Documentation = "https://ohmykode.com/footy-hub/"

[tool.poetry]
name = "footy-hub"
version = "0.1.0"
description = "Football data analysis for learning purposes."
authors = ["Cyuss <maamra.youcef@gmail.com>"]
packages = [
    {include = "crawler"},
    {include = "market_analysis"},
    {include = "utils"}
]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
sqlalchemy = "^1.4.45"
neo4j = "^5.3.0"
pandas = "^1.5.2"
hydra-core = "^1.3.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
ruff = "^0.0.210"
radon = "^5.1.0"
cloc = "^0.2.5"
mypy = "^0.991"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"
hypothesis = "^6.61.0"
pyinstrument = "^4.4.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.2"
mkdocs-minify-plugin = "^0.6.2"
mkdocs-redirects = "^1.2.0"
mkdocstrings = "^0.19.1"
mkdocs-autorefs = "^0.4.1"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C", "B", "I001"]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E501", # line too long, handled by black
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"
src_paths = ["isort"]
lines_after_imports = 2
multi_line_output = 3
skip = [".gitignore", ".dockerignore", ".venv", "^.*"]
extend_skip = [".md", ".json", ".csv"]
skip_glob = ["docs/*"]
use_parentheses = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests/"]
markers = [
    "crawler",
    "ml",
    "data"
]

[tool.coverage.run]
parallel = true

[tool.mypy]
check_untyped_defs = true
ignore_errors = true
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
